--- a/css/all.css
+++ b/css/all.css
@@ -17,7 +17,7 @@ body{
 	font: 16px/30px 'helvetica-neue-cyr-light', Arial, Helvetica, sans-serif;
 	height: 100%;
 	color: #4c4c4c;
-	background: #fff url(../img/bg-page.png) 50% 0;
+	background: #fff url(../img1/bg-page.png) 50% 0;
 	min-width: 320px;
 }
 h1, h2, h3, h4, h5, h6{
@@ -372,7 +372,7 @@ table th{
 	border-top: 2px solid #55c7da;
 }
 .user-content blockquote:after{
-	background: url(../img/depict-quote.png) no-repeat;
+	background: url(../img1/depict-quote.png) no-repeat;
 	width: 64px;
 	height: 48px;
 	left: 22px;
@@ -1018,7 +1018,7 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 /*depict files*/
 [class|="depict-files"],
 [class*=" depict-files-"]{
-	background:url(../img/sprite-files.png) 0 0 no-repeat;
+	background:url(../img1/sprite-files.png) 0 0 no-repeat;
 	display: inline-block;
 	vertical-align: top;
 }
@@ -1191,7 +1191,7 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	display: none;
 }
 .screen__bg{
-	background: url(../img/screen.jpg) no-repeat 50% 0;
+	background: url(../img1/screen.jpg) no-repeat 50% 0;
 	-webkit-background-size: cover;
 	background-size: cover;
 	height: 100%;
@@ -1571,7 +1571,7 @@ a.products__inner:hover{
 	background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,0) 12%,rgba(0,0,0,0) 13%,rgba(0,0,0,0.04) 17%,rgba(0,0,0,0.11) 23%,rgba(0,0,0,0.39) 40%,rgba(0,0,0,0.5) 50%,rgba(0,0,0,0.39) 60%,rgba(0,0,0,0.11) 77%,rgba(0,0,0,0.04) 83%,rgba(0,0,0,0) 87%,rgba(255,255,255,0) 88%,rgba(255,255,255,0) 100%);
 }
 .no-cssgradients .previews__item_lg .previews__img:after{
-	background: url(../img/shadow-previews.png) repeat-x 0 50%;
+	background: url(../img1/shadow-previews.png) repeat-x 0 50%;
 }
 .previews__item_lg .previews__img img{
 	min-height: 100%;
@@ -1623,7 +1623,7 @@ a.products__inner:hover{
 	background: linear-gradient(to right,  #3277c6 0%,#07a4e9 100%);
 }
 .no-cssgradients .previews__item_lg .previews__img:after{
-	background: #07a4e9 url(../img/gradient-video-slider.png) repeat-y;
+	background: #07a4e9 url(../img1/gradient-video-slider.png) repeat-y;
 }
 .video-section h2{
 	color: #fff;
@@ -1656,7 +1656,7 @@ a.products__inner:hover{
 .logo a:hover{ text-decoration: none; }
 .logo__img{
 	display: block;
-	background: url(../img/logo.png) no-repeat;
+	background: url(../img1/logo.png) no-repeat;
 	-webkit-background-size: contain;
 	background-size: contain;
 	width: 180px;
@@ -1978,7 +1978,7 @@ a.products__inner:hover{
 	top: 0;
 	bottom: 0;
 	width: 6px;
-	background: url(../img/bg-tape.png) repeat-x;
+	background: url(../img1/bg-tape.png) repeat-x;
 	-webkit-background-size: contain;
 	background-size: contain;
 }
@@ -2168,7 +2168,7 @@ a.products__inner:hover{
 .site-developer_logo{
 	display: inline-block;
 	vertical-align: top;
-	background: url(../img/logo-developer-2x.png) no-repeat top left;
+	background: url(../img1/logo-developer-2x.png) no-repeat top left;
 	-webkit-background-size: contain;
 	background-size: contain;
 	width: 149px;
@@ -2179,7 +2179,7 @@ a.products__inner:hover{
 	-webkit-transition: opacity 0.2s;
 	transition: opacity 0.2s;
 }
-.no-backgroundsize .site-developer_logo{ background-image: url(../img/logo-developer.png); }
+.no-backgroundsize .site-developer_logo{ background-image: url(../img1/logo-developer.png); }
 /*footer holder end*/
 /*FOOTER end*/
 
