--- a/css/sp.css
+++ b/css/sp.css
@@ -5,7 +5,44 @@
 	display: inline-block;
 	vertical-align: top;
 }
+.depict-search,
+.input-complete:focus + .btn-search .depict-search{ background-position: 0 0; width: 16px; height: 16px; }
+.depict-search-h{ background-position: 0 -36px; width: 16px; height: 16px; }
+.depict-search-active,
+.input-complete + .btn-search .depict-search{ background-position: 0 -72px; width: 16px; height: 16px; }
+.depict-angle{ background-position: 0 -108px; width: 10px; height: 9px; }
+.depict-angle-h{ background-position: 0 -137px; width: 10px; height: 9px; }
+.depict-clear{ background-position: 0 -166px; width: 22px; height: 22px; }
+.depict-clear-h{ background-position: 0 -208px; width: 22px; height: 22px; }
+.depict-check{ background-position: 0 -250px; width: 16px; height: 14px; }
+.depict-check-disabled{ background-position: 0 -284px; width: 16px; height: 14px; }
+
 /*icons end*/
+
+/*skills*/
+[class|="depict-skills"],
+[class*=" depict-skills-"]{
+	background:url(../img/sprite-skills.png) 0 0 no-repeat;
+	display: inline-block;
+	vertical-align: top;
+}
+.depict-skills-01{ background-position: 0 0; width: 30px; height: 30px; }
+.depict-skills-02{ background-position: 0 -50px; width: 30px; height: 30px; }
+.depict-skills-03{ background-position: 0 -100px; width: 30px; height: 30px; }
+.depict-skills-04{ background-position: 0 -150px; width: 30px; height: 30px; }
+.depict-skills-05{ background-position: 0 -200px; width: 30px; height: 30px; }
+.depict-skills-06{ background-position: 0 -250px; width: 30px; height: 30px; }
+.depict-skills-07{ background-position: 0 -300px; width: 30px; height: 30px; }
+.depict-skills-08{ background-position: 0 -350px; width: 30px; height: 30px; }
+.depict-skills-09{ background-position: 0 -400px; width: 30px; height: 30px; }
+.depict-skills-10{ background-position: 0 -450px; width: 30px; height: 30px; }
+.depict-skills-11{ background-position: 0 -500px; width: 30px; height: 30px; }
+.depict-skills-12{ background-position: 0 -550px; width: 30px; height: 30px; }
+.depict-skills-13{ background-position: 0 -600px; width: 30px; height: 30px; }
+.depict-skills-14{ background-position: 0 -650px; width: 30px; height: 30px; }
+.depict-skills-15{ background-position: 0 -700px; width: 30px; height: 30px; }
+.depict-skills-16{ background-position: 0 -750px; width: 30px; height: 30px; }
+/*skills end*/
 
 /*social icons*/
 [class|="soc-depict"],
