--- a/css/all.css
+++ b/css/all.css
@@ -1335,6 +1335,10 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
+	position: absolute;
+	top: 100%;
+	left: 0;
+	height: 187px;
 }
 .soc-square li,
 .user-content .soc-square li,
@@ -1345,6 +1349,8 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	background: #fff;
 	box-shadow: inset 0 0 0 1px #54c7d9;
 	margin-top: -1px;
+	overflow: hidden;
+	display: none;
 }
 .user-content .soc-square li:before,
 .user-content .soc-square li:first-child:before{
@@ -1382,25 +1388,15 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 .soc-square a:hover .soc-icons [class*="depict-"]{ opacity: 0; }
 .soc-square a:hover .soc-icons [class$="-h"]{ opacity: 1; }
 
-.soc-count{
-	display: none;
+.soc-square .soc-count{
 	position: absolute;
-	left: 100%;
+	left: 0;
 	top: 0;
-	margin-left: -1px;
-	line-height: 63px;
-	text-align: center;
-	height: 63px;
-	width: 62px;
-	background: #fff;
-	box-shadow: inset 0 0 0 1px #54c7d9;
 	font-family: 'helvetica-neue-cyr-light', Arial, Helvetica, sans-serif;
-
 	font-size: 16px;
+	line-height: 30px;
 	letter-spacing: normal;
-}
-.soc-square li:hover .soc-count{
-	display: block;
+	visibility: hidden;
 }
 /*social square end*/
 
@@ -1968,12 +1964,16 @@ a.products__inner:hover{
 	-webkit-transition-duration: 0.2s;
 	transition-duration: 0.2s;
 }
-a.news__inner:hover{
+a.news__inner:hover,
+.news__item:hover a.news__inner{
 	box-shadow: inset 0 0 0 1px #54c7d9, 0 10px 27px rgba(0, 0, 0, 0.25);
 }
 .news__img{
 	float: left;
 	position: relative;
+	overflow: hidden;
+	height: 250px;
+	width: 250px;
 }
 .news__img:after{
 	content: '';
@@ -2040,6 +2040,14 @@ a.news__inner:hover .news__title{
 	width: 62px;
 	text-indent: -9999px;
 	overflow: hidden;
+	-webkit-transition-property: background;
+	transition-property: background;
+	-webkit-transition-duration: 0.2s;
+	transition-duration: 0.2s;
+}
+.share:hover,
+.share.opened{
+	background: #00abc7;
 }
 .share:before{
 	content: '';
@@ -2059,6 +2067,10 @@ a.news__inner:hover .news__title{
 	text-align: center;
 	padding: 50px 80px 70px;
 }
+.btn-more{
+	display: inline-block;
+	vertical-align: top;
+}
 .load-more__icon{
 	display: block;
 	position: relative;
@@ -2068,6 +2080,10 @@ a.news__inner:hover .news__title{
 	margin: 0 auto;
 	background: #54c7d9;
 	border-radius: 90px;
+	-webkit-transition-property: -webkit-transform;
+	transition-property: transform;
+	-webkit-transition-duration: 0.2s;
+	transition-duration: 0.2s;
 }
 .animate .load-more__icon {
 	width: 100px;
@@ -2097,6 +2113,11 @@ a.news__inner:hover .news__title{
 		transform: rotate(-360deg);
 	}
 }
+.btn-more:hover .load-more__icon {
+	-webkit-transform: rotate(35deg);
+	-ms-transform: rotate(35deg);
+	transform: rotate(35deg);
+}
 .load-more__icon [class*="depict-"]{
 	position: absolute;
 	left: 50%;
@@ -2107,7 +2128,7 @@ a.news__inner:hover .news__title{
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 }
-.load-more > strong{
+.load-more strong{
 	display: block;
 	font-family: 'rotondac-regular', Arial, Helvetica, sans-serif;
 	font-size: 24px;
@@ -2187,10 +2208,12 @@ a.news__inner:hover .news__title{
 	text-decoration: none;
 	-webkit-transition-property: background;
 	transition-property: background;
-	-webkit-transition-duration: 0.2s;
-	transition-duration: 0.2s;
+	-webkit-transition-duration: 0.3s;
+	transition-duration: 0.3s;
 }
 .nav-list > li > a:hover{
+	-webkit-transition-duration: 0.2s;
+	transition-duration: 0.2s;
 	text-decoration: none;
 	background: #029db5;
 }
